add answer of question

--- a/theoretical_questions/1.md
+++ b/theoretical_questions/1.md
@@ -1,12 +1,12 @@
 #### Що таке PEP8?. Для чого він використовується?
 
 `
-Тут буде ваша відповідь
+Стилістичні правила написання коду
 `
 
 #### Що таке “Keywords” в Python? Наведіть 10 прикладів 
 `
-Тут буде ваша відповідь
+Зарезервовані імена: int, float, list, tuple, set, in, is, None, for, while
 `
 
 #### В якому випадку викликається SyntaxError ?
@@ -17,123 +17,148 @@
 
 #### Що таке змінна(variable) ? Наведіть приклади правильного і не правильного оголошення змінної
 `
-Тут буде ваша відповідь
+Змінна зберігає значення, присвоєне їй.
+nice_var = 'good'
+1_nice_var = 'bad'
 `
 
 #### Що таке базовий тип(Primitive Built-in Types) ? Наведіть приклади.
 `
-Тут буде ваша відповідь
+int, float, list, tuple, set
 `
 
 #### Яка різниця між параметром та аргументом функції ?
 `
-Тут буде ваша відповідь
+Аргумент функції - це змінна, яка передається на вхід функції і буде 
+використовуватись в ній.
+
+Параметри функції - те ж саме, що ыы  аргументи...
 `
 
 #### Що таке область видимості ? Наведіть розгорнути приклад пошуку змінної в області видимості з кількома рівнями
 `
-Тут буде ваша відповідь
+область видимості - це місце, де живуть змінні, які доступні саме в цій області ,а в інші жити не можуть
 `
 
 #### Яка різниця між локальними і глобальними змінними ?
 `
-Тут буде ваша відповідь
+Локальна змінна доступна тільки в обмеженій області видимості (наприклад, функції). Глобальна - доступна "скрізь".
 `
 
 #### Чому використання глобальних змінних вважається поганою практикою ?
 `
-Тут буде ваша відповідь
+Тяжко контролювати усі зміни над цією змінною в коді
 `
 
 #### Який об'єкт в Python може вважатися iterable ? Наведіть приклад 3 вбудованих об'єктів з данною властивістю
 `
-Тут буде ваша відповідь
+Це об"єкт, над яким можна ітеруватись: range, list, set...
 `
 
 #### Як зробити параметр функції не обов'язковим ?
 `
-Тут буде ваша відповідь
+Хз
 `
 
 #### Як описати функцію, щоб вона приймала необмеженну кіькість параментрів? Наведіть два приклади та опишіть різницю
 `
-Тут буде ваша відповідь
+def function_1(*kwards):
+    """на вхід список"""
+    pass
+    
+def function_2(**kwards):
+    """ на вхід словник, імена аргументів = ключі словника"""
+    pass
 `
 
 #### Яка різниця між функціями та методами ?
 `
-Тут буде ваша відповідь
+Методи працюють тільки екземплярами класу, в якому вони написані, функції доступні для роботи зі всім
 `
 
 #### Яка різниця між return та yield ?
 `
-Тут буде ваша відповідь
+yield - для роботи із генераторами (ітерованим об"єктом), 
+запам"ятовує тільки теперішнє значення , а не весь об"єкт в цілому
 `
 
 #### Які методи базових типів  (str, list, dict...)  ви знаєте. Наведіть приклад з 3 методів на кожен тип. 
 `
-Тут буде ваша відповідь
+list.append(), list.extend(), list.index()       
+dict.get(), dict.update(), dict.items()
+str.capitalize(), str.count(), str.isdigit()
+
 `
 
 #### Що таке анотації. Для чого вони використовуються ? Наведіть приклади анотацій
 `
-Тут буде ваша відповідь
+Опис функції між потрійними лапками """ анотація "" для кращого розуміння, що робить функція
+def foo():
+    """
+    params:
+    return:
+    """
 `
 
 
 #### Що таке Git? Для чого він використовується ?
 `
-Тут буде ваша відповідь
+Програма для контролю версій
 `
 
 #### Яка різниця між командами `git pull` та `git push` ?
 `
-Тут буде ваша відповідь
+pull - заберає "дані" із remote
+push - відправляє "дані" в remote
 `
 
 #### Які є стадії файлу в git ?
 `
-Тут буде ваша відповідь
+створення файлу -- індексування (add) -- збереження змін (commit) -- push
 `
 
 #### Що таке гілка в git ? Для чого вона використовується ?
 `
-Тут буде ваша відповідь
+відгалуження від основного проекту, зі збереженням попередньої історії коду, 
+щоб не було впливу на основну структуру проекту
 `
 
 #### Що таке `pull request` ?
 `
-Тут буде ваша відповідь
+Запит на merge певної гілки із іншою гілкою
 `
 
 #### Що таке `fork` ?
 `
-Тут буде ваша відповідь
+копіювання проекту в свій репозиторій із основного 
 `
 
 #### Чому здаючи домашні завдання PR треба робити в fork, а не в репозиторій Дениса ?
 `
-Тут буде ваша відповідь
+Щоб д/з не було видалене
 `
 #### Як недопустити, щоб git індексував деякі файли ? Які файли не бажано індексувати ? Які точно не можна індексувати ?
 `
-Тут буде ваша відповідь
+створити .gitigore
+не бажано індексувати файлм, які не потрібні в проекті
+точно не можна індексувати кеш, оточення ...
+
 `
 #### Що такe ssh ключ ?
 `
-Тут буде ваша відповідь
+Не знаю
 `
 #### Яка різниця між `git merge` та `git rebase` ?
 `
-Тут буде ваша відповідь
+Не знаю
 `
 
 #### Як подивитися історію комітів ?
 `
-Тут буде ваша відповідь
+git log
 `
 
 #### Опиши свої враження після проходження тесту
 `
-Тут буде ваша відповідь
+ідея дуже хороша, але чесно лінь Писати
 `
